# terraform-aws-sp-autopilot

./: .env.example  .env.local.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  .terraform.lock.hcl  ADD_IAM_PERMISSIONS.md  CLAUDE.md  CODECOV_SETUP.md  CONCEPTS.md  CONTRIBUTING.md  COST_ESTIMATION.md  DEVELOPMENT.md  ERROR_PATTERNS.md  ERROR_REFERENCE.md  IAM_MINIMAL_PERMISSIONS.json  IAM_MINIMAL_PERMISSIONS_COMPACT.json  IAM_SETUP_OPTIONS.md  INTEGRATION_TEST_CLEANUP.md  KNEE_POINT_OPTIMIZATION.md  LOCAL_DEVELOPMENT.md  MIGRATION.md  Makefile  README.md  README.md.old  REFACTORING_PLAN.md  RELEASING.md  SECURITY.md  STATIC_VALIDATION_REPORT.md  SUBTASK-6-1-STATUS.md  SUBTASK_6-1_STATUS.md  SUBTASK_6_1_COMPLETION.md  TESTING.md  VERIFICATION_INSTRUCTIONS.md  VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.md  api_gateway.tf  cloudwatch.tf  codecov.yml  (+33 more)
.auto-claude/specs/011-database-savings-plans-support/: IMPLEMENTATION_NOTES.md  build-progress.txt
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/hooks/: pre-commit
.github/workflows/: auto-assign.yml  auto-update-pr.yml  frontend-tests.yml  pr-checks.yml  release.yml  security-scan.yml  sonarcloud.yml  terraform-integration-tests.yml  terraform-tests.yml  terraform-unit-tests.yml  terraform-validation.yml  terratest.yml  tests.yml
docs/: STAGGERED_SP_STRATEGY.md  generate_gap_split_chart.py  imprint.html  index.html  privacy.html
docs/css/: legal.css  styles.css
docs/js/: chartManager.js  colorThemes.js  costCalculator.js  loadPatterns.js  main.js  spCalculations.js  urlState.js
docs/scripts/: verify_toc_links.py
docs/tests/: package-lock.json  package.json  playwright.config.js
docs/tests/fixtures/: reporter-sample.html  test-data.js
docs/tests/helpers/: assertions.js
docs/tests/specs/: metric-consistency.spec.js  page-load.spec.js  pattern-selection.spec.js  reporter-html.spec.js  slider-interactions.spec.js  strategy-stability.spec.js
docs/users/: operations-runbook.md
examples/conservative-strategy/: README.md  main.tf  variables.tf
examples/database-only/: README.md  main.tf  variables.tf
examples/dichotomy-strategy/: README.md  main.tf  variables.tf
examples/dry-run/: README.md  main.tf
examples/dynamic-strategy/: README.md  main.tf  variables.tf
examples/organizations/: README.md  main.tf  variables.tf
examples/single-account-compute/: README.md  main.tf  variables.tf
lambda/: local_runner.py
lambda/interactive_handler/: __init__.py  audit_logger.py  config.py  handler.py  slack_signature.py
lambda/interactive_handler/tests/: conftest.py  test_handler.py  test_signature.py
lambda/purchaser/: .coveragerc  INTEGRATION_TEST_RESULTS.md  README.md  clienterror_patterns.md  config.py  coverage_calc.py  guards.py  handler.py  purchase_execution.py  pytest.ini  requirements.txt  test_handler.py  test_integration.py  test_notifications.py  test_validation.py  validation.py
lambda/purchaser/tests/: __init__.py  conftest.py  test_handler.py  test_handler_import.py  test_integration.py  test_notifications.py  test_validation.py
lambda/reporter/: .coveragerc  README.md  TESTING.md  alerts.py  chart_data.py  config.py  csv_report.py  data_collector.py  email_notifications.py  handler.py  html_report.py  html_sections.py  json_report.py  notifications.py  pytest.ini  report_data.py  report_generator.py  requirements.txt  scheduler_preview.py  test_handler.py  test_notifications.py
lambda/reporter/tests/: __init__.py  conftest.py  test_alerts.py  test_csv_report.py  test_error_handling.py  test_essential.py  test_forecast.py  test_handler.py  test_handler_import.py  test_html_sections_units.py  test_local_mode.py  test_low_utilization_alerts.py  (+4 more)
lambda/scheduler/: .coveragerc  README.md  TESTING.md  config.py  conservative_strategy.py  coverage.py  coverage_calculator.py  dichotomy_strategy.py  email_notifications.py  fixed_strategy.py  follow_aws_strategy.py  follow_static_strategy.py  handler.py  integration_test_dry_run.md  notifications.py  offering_resolver.py  purchase_calculator.py  pytest.ini  queue_manager.py  recommendations.py  requirements.txt  simple_strategy.py  sp_coverage.py  sp_types.py  test_dry_run.sh
lambda/shared/: __init__.py  aws_debug.py  aws_utils.py  config_schemas.py  config_validation.py  constants.py  demo_mode.py  email_templates.py  follow_aws_strategy.py  follow_static_strategy.py  handler_utils.py  local_mode.py  notifications.py  optimal_coverage.py  purchase_calculator.py  purchase_optimizer.py  pytest.ini  queue_adapter.py  recommendations.py  savings_plans_metrics.py  sp_calculations.py  sp_types.py  spending_analyzer.py  storage_adapter.py  test_email_templates.py  usage_decline_check.py
lambda/tests/: MIGRATION_STATUS.md  __init__.py  conftest.py  test_lambda_packaging.py
scripts/: README.md  discover_services.py
terraform-tests/integration/: .gitignore  PERFORMANCE-VALIDATION.txt  README.md  TEST-VALIDATION.md  cleanup.go  cleanup_orphaned_test.go  constants.go  examples_integration_test.go  examples_test.go  go.mod  go.sum  measure-performance.sh  run-test.ps1  run-test.sh  terraform_aws_sp_autopilot_test.go
terraform-tests/unit/: api_gateway.tftest.hcl  cloudwatch.tftest.hcl  eventbridge.tftest.hcl  iam.tftest.hcl  lambda.tftest.hcl  outputs.tftest.hcl  s3.tftest.hcl  sns.tftest.hcl  sqs.tftest.hcl  sqs_policy.tftest.hcl  variables.tftest.hcl  variables.tftest.hcl.backup
test/: INSTALL.md  PERFORMANCE.md  README.md  generate-go-sum.ps1  generate-go-sum.sh  measure-performance.ps1  terraform_aws_sp_autopilot_test.go
tests/: E2E_TEST_GUIDE.md  README.md  cloudwatch.tftest.hcl  e2e_slack_interactive.py  eventbridge.tftest.hcl  iam.tftest.hcl  s3.tftest.hcl  sns.tftest.hcl  sqs.tftest.hcl  test_local_mode.py  test_local_runner.py  variables.tftest.hcl
(+64 files in other folders)
