[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terraform-aws-sp-autopilot"
version = "0.1.0"
description = "AWS Savings Plans Automation Lambda Functions"
requires-python = ">=3.9"

# ==============================================================================
# Ruff Configuration - Linting and Formatting
# ==============================================================================

[tool.ruff]
# Set the maximum line length to 100 characters (PEP 8 default is 79)
line-length = 100
target-version = "py39"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
    ".terraform",
    "node_modules",
]

# Enable automatic fixing where possible
fix = true

[tool.ruff.lint]
# Enable recommended rules plus additional checks
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez (datetime timezone awareness)
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules that may conflict with existing code patterns
ignore = [
    "E402",     # Module level import not at top (scheduler uses dynamic imports)
    "E501",     # Line too long (handled by formatter)
    "F841",     # Local variable assigned but never used (test setup)
    "UP035",    # typing.Dict/List deprecated (codebase uses typing style)
    "UP006",    # Use dict instead of Dict (codebase uses typing style)
    "B007",     # Loop control variable not used (intentional iteration)
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison
    "PLR0912",  # Too many branches (complexity metric)
    "PLR0915",  # Too many statements (complexity metric)
    "RET503",   # Missing explicit return (implicit None return is fine)
    "RET504",   # Unnecessary assignment before return
    "ARG001",   # Unused function argument (common in Lambda handlers)
    "ARG002",   # Unused method argument
    "PTH123",   # Use Path.open instead of open (boto3 uses strings)
    "PTH120",   # os.path.dirname() -> Path.parent (not critical for test setup)
    "PTH118",   # os.path.join() -> Path (needed for dynamic module loading)
    "PTH100",   # os.path.abspath() -> Path.resolve() (not critical for test setup)
    "PT011",    # pytest.raises too broad (nice-to-have, not critical)
    "SIM117",   # Nested with statements (readable as-is)
    "DTZ005",   # datetime.datetime.now() without tz - AWS SDK compatibility
    "RUF001",   # Ambiguous unicode character (emoji in docstrings/comments)
    "RUF002",   # Ambiguous unicode character (emoji in docstrings/comments)
    "RUF013",   # PEP 484 implicit Optional (existing pattern)
    "RUF015",   # Prefer next() over single element slice (existing pattern)
    "PLC0415",  # Import should be at top-level (test files import conditionally)
    "PLW0603",  # Global statement used (needed for lazy client initialization)
    "B904",     # Raise from within except (nice-to-have exception chaining)
    "B017",     # Bare exception in pytest.raises (test files)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Test files can use assertions and magic values
"test_*.py" = ["S101", "PLR2004"]
"**/tests/**/*.py" = ["S101", "PLR2004", "ARG001"]

[tool.ruff.lint.mccabe]
# Set maximum cyclomatic complexity (default: 10)
max-complexity = 15

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["shared"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use `\n` line endings for all files
line-ending = "auto"

# Skip magic trailing comma (let formatter decide)
skip-magic-trailing-comma = false

# ==============================================================================
# Pytest Configuration (consolidated from lambda/scheduler/pytest.ini)
# ==============================================================================

[tool.pytest.ini_options]
testpaths = [
    "lambda/scheduler/tests",
    "lambda/purchaser",
    "lambda/reporter",
]

python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Coverage and verbosity settings
addopts = [
    "-v",
    "--cov=lambda",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ==============================================================================
# Coverage Configuration
# ==============================================================================

[tool.coverage.run]
source = ["lambda"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
